--- a/Clark_etal_analysis/Appendix_S2_CompileLandcover.Rmd
+++ b/Clark_etal_analysis/Appendix_S2_CompileLandcover.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Appendix S2 - Compile Landcover Covariates"
-author: "Dr Nicholas Clark"
+author: "Nicholas J Clark, David J. Harris, Ceridwen Fraser"
 output:
   pdf_document:
     highlight: zenburn
@@ -12,24 +12,24 @@ library(knitr)
 opts_chunk$set(tidy.opts=list(width.cutoff=50),tidy=TRUE)
 ```
 
-If need be, install `MODISTools2`. Please note that older versions of `MODISTools` may have problems with broken links! We have found it is better to remove old versions first and install the most up-to-date version
+If need be, install the `MODISTools2` package. Please note that older versions of `MODISTools` may have problems with broken links! We have found it is better to remove old versions first and install the most up-to-date version
 ```{r eval = FALSE}
 remove.packages('MODISTools')
 install.packages("https://modis.ornl.gov/files/modissoapservice/MODISTools2.tar.gz",
                  repos = NULL, type = "source")
 ```
  
-Or, if you prefer manual installation, you can manually downlaod MODISTools2.tar.gz here (https://modis.ornl.gov/data/modis_webservice.html)
+Or, if you prefer manual installation, you can manually downlaod `MODISTools2.tar.gz` here (https://modis.ornl.gov/data/modis_webservice.html)
 ```{r eval = FALSE}
 install.packages("yourfilepath/MODISTools2.tar.gz", repos = NULL, type = "source")
 ```
 
-Load the previously compiled BBS data
+Load the previously compiled BBS data from `Appendix_S1`
 ```{r eval = FALSE}
 load("./BBS.Data.cleaned/BBS.2003-2009.filtered.Rdata")
 ```
 
-Gather lats and longs for collecting MODIS data from each unique site
+Gather lats and longs for collecting MODIS landover data from each unique site
 ```{r eval = FALSE}
 coordinates <- data.frame(lat = latlon[,2], long = latlon[,1])
 ```
@@ -42,13 +42,13 @@ uniq.coordinates = coordinates %>%
   distinct()
 ```
 
-Source functions needed for MODIS downloading and processing from N Clark's `GitHub` account
+Source functions needed for MODIS downloading and processing from NJ Clark's `GitHub` account
 ```{r eval = FALSE}
 source("https://raw.githubusercontent.com/nicholasjclark/
        LandcoverMODIS/master/R/Landcover_functions.R")
 ```
 
-Download data for the specified years (!! but don't include 2010-2012, see below !!). This stores the raw downloaded data in a new 'LandCover' folder. Note that the input `coordinates` file must have colnames `lat` and `long`. Also note that landcover downloads struggle if we access more than ~100 points at a time (depending on your system). Downloading multiple subsets over time is safer
+Download data for the specified years (but don't include years 2010-2012, these are not accessible). This stores the raw downloaded data in a new `LandCover` folder within your working directory. Note that the input `coordinates` file must have colnames `lat` and `long`. Also note that landcover downloads struggle if we access more than ~100 points at a time (depending on your system). Downloading multiple subsets over time is safer
 ```{r eval = FALSE}
 download_landcover(years_gather = c(2003:2009), 
                    coordinates = uniq.coordinates[1:100, ])
